--- a/part2.Rmd
+++ b/part2.Rmd
@@ -12,8 +12,8 @@ knitr::opts_chunk$set(echo = TRUE)
 ## Organisation (75 minutes)
 
 * Spatial modelling: why and which kinds; is spatial autocorrelation just poor data collection design and/or model mis-specification? (15)
-* Spatial modelling: graph/weight-based neighbours; distance; spatially structured random effects (15)
-* QA/discussion
+* Exercise + review (10)
+* Spatial modelling: graph/weight-based neighbours; spatially structured random effects (15)
+* Exercise + review (10)
 * Spatial regression: simultaneous and conditional autoregressive approaches (15)
-* Spatio-temporal regression: spatial panel (15)
-* QA/discussion
+* Exercise + review (10)
