--- a/useR19_I.bib
+++ b/useR19_I.bib
@@ -77,7 +77,13 @@ year = { 2008 },
 author = { Jonathan Iliffe and Roger Lott },
 publisher = {CRC Inc}
 }
-
+@book{sdsr,
+title = { Spatial Data Science; uses cases in R },
+year = { forthcoming },
+author = { Edzer Pebesma and Roger S. Bivand },
+url = { https://r-spatial.org/book/ },
+publisher = {CRC}
+}
 @Article{classesmethods,
     author = {Edzer J. Pebesma and Roger S. Bivand},
     title = {Classes and methods for spatial data in {R}},
