--- a/part1.Rmd
+++ b/part1.Rmd
@@ -17,10 +17,6 @@ link-citations: yes
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-```{r}
-have_starsdata = require("starsdata") # TRUE to do the big data example with pkg starsdata; instructions for installing below
-```
-
 ## Part I (90')
 
 * A. Spatial data, simple features (20' + 10' exercises)
@@ -375,8 +371,8 @@ install.packages("starsdata", repos = "https://cran.uni-muenster.de/pebesma" , t
 library(starsdata)
 ```
 
-```{r echo=FALSE,eval=have_starsdata}
-library(starsdata)
+```{r}
+have_starsdata = require("starsdata") # TRUE to do the big data example with pkg starsdata; instructions for installing below
 ```
 
 We will read in the four 10-m resolution bands:
@@ -493,13 +489,84 @@ plot(de, col = NA, border = 'red', add = TRUE)
 plot(st_geometry(a.means), col = 'green', add = TRUE, pch = 16)
 ```
 
+A `ggplot2` plot of the same is obtained by
+```{r}
+library(viridis)
+g = ggplot() + coord_equal() +
+    scale_fill_viridis() +
+    theme_void() +
+    scale_x_discrete(expand=c(0,0)) +
+    scale_y_discrete(expand=c(0,0))
+g + geom_stars(data = int) + geom_sf(data = de, fill = NA) + geom_sf(data = a.means)
+```
+
+It is likely that `geom_stars()` will be developed further, to take
+some of the defaults now being set for creating object `g`.
+
 A further worked out space/time case study on this type of data is
 found in the geostatistics/interpolation chapter of [@sdsr].
 
-### stars: time, raster, data cubes (15')
+### time series rasters
 
+```{r}
+system.file("nc/bcsd_obs_1999.nc", package = "stars") %>%
+    read_ncdf() -> bcsd
+g + geom_stars(data = bcsd[1]) + facet_wrap("time")
+```
 
 ### Transforming rasters
+
+With such a grid, and any other grid, `st_transform` simply creates
+a new curvilinear grid:
+
+```{r}
+(nc_state_plane = st_crs(2264))
+prec_slice %>% 
+  st_transform(nc_state_plane) %>% 
+  plot(border = NA, breaks = breaks, reset = FALSE)
+nc %>%
+  st_transform(nc_state_plane) %>% 
+  plot(add = TRUE, reset = FALSE, col = NA, border = 'red')
+```
+
+We can _warp_ a **regular** grid to be a new **regular** grid in the
+existing, or to a default grid in a new target CRS, e.g. by
+
+```{r}
+tif = system.file("tif/L7_ETMs.tif", package = "stars")
+read_stars(tif) %>%
+  slice(prec, index = 1, along = "band") %>%
+  st_warp(crs = "+proj=lcc") %>%
+  plot()
+```
+
+As an option, it can use `gdalwarp`, using its library interface
+(see `sf::gdal_utils`).
+
+### Curvilinear grids
+
+Consider the following, curvilinear, grid:
+```{r}
+prec_file = system.file("nc/test_stageiv_xyt.nc", package = "stars")
+(prec = read_ncdf(prec_file, curvilinear = c("lon", "lat")))
+## plot(prec) ## gives error about unique breaks:
+## remove NAs, zeros, and give a large number
+## of breaks (used for validating in detail)
+qu_0_omit = function(x, ..., n = 22) {
+  x = na.omit(x)
+  c(0, quantile(x[x > 0], seq(0, 1, length.out = n)))
+}
+library(dplyr) # loads slice generic
+prec_slice = slice(prec, index = 17, along = "time")
+breaks = qu_0_omit(prec_slice[[1]])
+plot(prec_slice, border = NA, breaks = breaks, reset = FALSE)
+nc = sf::read_sf(system.file("gpkg/nc.gpkg", package = "sf"), "nc.gpkg")
+plot(st_geometry(nc), add = TRUE, reset = FALSE, col = NA, border = 'red')
+```
+
+Essentially, such grids are plotted as simple features (small
+polygons) by extrapolating grid cell centeres. This will not (yet)
+work with grid crossing dateline or poles.
 
 ### Exercises
 
